# call_me_maybe_42

./: .gitignore  Makefile  README.md  funtion_schema.py  main.py  pyproject.toml
data/output/: function_calling_results.json
llm_sdk/llm_sdk/: __init__.py
src/: __main__.py  funtion_schema.py
