[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Function calling with restricted decoding for small LLMs"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pydantic",
    "torch",
    "transformers",
    "huggingface-hub",
    "accelerate",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "flake8",
    "mypy",
]